--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "three": "0.160.0",
     "@react-three/fiber": "8.15.14",
     "@react-three/drei": "9.96.1",
-    "@google/genai": "0.0.10"
+    "@google/genai": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
